fix:sidebar flickering

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,7 +13,6 @@ body {
     padding: 0;
     font-weight: 400;
 }
-
 button {
     font-weight: 500;
 }
@@ -153,9 +152,6 @@ main {
     color: rgb(240, 240, 240);
     mix-blend-mode: screen;
     opacity: 0.8;
-}
-.sidebar-1 {
-    transform: translateX(-300px);
 }
 .sidebar-show {
     left: 0;
